[gd_scene load_steps=13 format=3 uid="uid://cofjhd8p33l8d"]

[ext_resource type="Texture2D" uid="uid://b2xuqawmsibp3" path="res://assets/Sprite Pack 8/4 - Percy/Running (32 x 32).png" id="1_5dr8d"]
[ext_resource type="Script" path="res://scripts/trex.gd" id="1_t17cu"]
[ext_resource type="Texture2D" uid="uid://dgucm8v82msvi" path="res://assets/Sprite Pack 8/4 - Percy/Shooting_Fireball (32 x 32).png" id="2_gk5cu"]
[ext_resource type="Texture2D" uid="uid://cr43vl7ep772" path="res://assets/Sprite Pack 8/4 - Percy/Hurt (32 x 32).png" id="3_yeqbk"]
[ext_resource type="PackedScene" uid="uid://cngk7bj7teyb1" path="res://prefabs/hitbox.tscn" id="5_ax3kc"]

[sub_resource type="Animation" id="Animation_2huuh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5dr8d")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kyigo"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_yeqbk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3d0b0"]
resource_name = "running"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5dr8d")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 5, 5]
}

[sub_resource type="Animation" id="Animation_c277l"]
resource_name = "shooting"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_gk5cu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_fireball"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2lbbx"]
_data = {
"RESET": SubResource("Animation_2huuh"),
"hurt": SubResource("Animation_kyigo"),
"running": SubResource("Animation_3d0b0"),
"shooting": SubResource("Animation_c277l")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8s2fq"]
size = Vector2(13, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6ljl"]
size = Vector2(11, 3.25)

[node name="trex" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_t17cu")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_5dr8d")
hframes = 6

[node name="hurt_feedback" type="Sprite2D" parent="sprite"]
visible = false
self_modulate = Color(0.909804, 0.486275, 0, 1)
texture = ExtResource("3_yeqbk")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2lbbx")
}
autoplay = "running"

[node name="fireball_spawn_point" type="Marker2D" parent="."]
visible = false
position = Vector2(5, -13)

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -8)
shape = SubResource("RectangleShape2D_8s2fq")

[node name="ground_detector" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(7, 4)
collision_mask = 2

[node name="player_detector" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -8)
target_position = Vector2(50, 0)

[node name="hitbox" parent="." instance=ExtResource("5_ax3kc")]
visible = false
position = Vector2(0, -19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_m6ljl")
debug_color = Color(1, 0, 0, 1)

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
